--- a/Type_Confusion/type_confusion.html
+++ b/Type_Confusion/type_confusion.html
@@ -1,5 +1,20 @@
 <html>
   <h3> Type Confusion Vulnerability Exploitation </h3>
+  <style>
+    body {
+    background-color: white;
+}
+
+h3 {
+    color: white;
+    text-align: center;
+}
+
+body {
+    font-family: verdana;
+    font-size: 20px;
+}
+  </style>
   <body>
    <div>Type confusion bug can be very powerful, with the potential to form the basis of 100% reliable exploits (as per Google Project Zero) more information available in https://googleprojectzero.blogspot.ae/2015/06/what-is-good-memory-corruption.html 
     
