--- a/Type_Confusion/type_confusion.html
+++ b/Type_Confusion/type_confusion.html
@@ -6,19 +6,16 @@
 }
 
 h3 {
-    color: white;
+    color: Blue;
     text-align: center;
 }
 
-body {
+p {
     font-family: verdana;
     font-size: 20px;
 }
   </style>
   <body>
-   <div>Type confusion bug can be very powerful, with the potential to form the basis of 100% reliable exploits (as per Google Project Zero) more information available in https://googleprojectzero.blogspot.ae/2015/06/what-is-good-memory-corruption.html 
-    
-    According to CWE (https://cwe.mitre.org/data/definitions/843.html)  "The program allocates or initializes a resource such as a pointer, object, or variable using one type, but it later accesses that resource using a type that is incompatible with the original type. When the program accesses the resource using an incompatible type, this could trigger logical errors because the resource does not have expected properties. In languages without memory safety, such as C and C++, type confusion can lead to out-of-bounds memory access.
-    </div>
+   <div><p Type confusion bug can be very powerful, with the potential to form the basis of 100% reliable exploits (as per Google Project Zero) more information available in https://googleprojectzero.blogspot.ae/2015/06/what-is-good-memory-corruption.html </p></div>
   </body>
   </html>
