--- a/Type_Confusion/type_confusion.html
+++ b/Type_Confusion/type_confusion.html
@@ -10,9 +10,11 @@ h3 {
     text-align: center;
 }
 
-p {
+body {
     font-family: verdana;
     font-size: 20px;
+    text-align: center;
+    color: blue;
 }
   </style>
   <body>
