--- a/Type_Confusion/type_confusion.html
+++ b/Type_Confusion/type_confusion.html
@@ -10,7 +10,7 @@ h3 {
     text-align: center;
 }
 
-body {
+p.center {
     font-family: verdana;
     font-size: 20px;
     text-align: center;
@@ -18,6 +18,6 @@ body {
 }
   </style>
   <body>
-   <div><p Type confusion bug can be very powerful, with the potential to form the basis of 100% reliable exploits (as per Google Project Zero) more information available in https://googleprojectzero.blogspot.ae/2015/06/what-is-good-memory-corruption.html </p></div>
+   <div><p class="center"> Type confusion bug can be very powerful, with the potential to form the basis of 100% reliable exploits (as per Google Project Zero) more information available in https://googleprojectzero.blogspot.ae/2015/06/what-is-good-memory-corruption.html </p></div>
   </body>
   </html>
