--- a/Type_Confusion/type_confusion.html
+++ b/Type_Confusion/type_confusion.html
@@ -16,6 +16,7 @@ p.padding-left {
     text-align: center;
     color: black;
     padding-left: 2cm;
+    padding-right: 2cm;
 }
   </style>
   <body>
