--- a/Type_Confusion/type_confusion.html
+++ b/Type_Confusion/type_confusion.html
@@ -36,7 +36,7 @@ p.padding-left {
     
     <div><p class="padding-left"> As per below code, the <b>#ifdef SECURE</b> block is properly setting 'Callback' member of the structure before passing the pointer to function as parameter whereas <b>#else</b> block does not do so and it leads to vanilla <b>type confusion vulnerability</b><br />
     </a></p></div>
-<div><p class="padding-left><a href="https://github.com/hacksysteam/HackSysExtremeVulnerableDriver/blob/master/Driver/TypeConfusion.c#L139> Click here to get the source code</a></p><br />
+<div><p class="padding-left">Click <a href="https://github.com/hacksysteam/HackSysExtremeVulnerableDriver/blob/master/Driver/TypeConfusion.c#L139">here</a>to get the source code</p><br />
   <p class="padding-left"><img  src="https://github.com/hackingportal/hackingportal.github.io/blob/master/Type_Confusion/images/Image.png?raw=true" alt="code"></p></div>
 <div><p class="padding-left"><a href="https://hackingportal.github.io/">Back</a></p></div>
   </body>
