--- a/Type_Confusion/type_confusion.html
+++ b/Type_Confusion/type_confusion.html
@@ -93,6 +93,10 @@ p.padding-left {
  https://github.com/FuzzySecurity/HackSysTeam-PSKernelPwn/blob/master/Kernel_TypeConfusion.ps1<br/>
  https://osandamalith.com/2017/04/05/windows-kernel-exploitation-stack-overflow/<br/>
  https://nebelwelt.net/publications/files/16CCS2.pdf <br/>
+	
+	 <!-- Start of SimpleHitCounter Code -->
+<div align="center"><a href="http://www.simplehitcounter.com" target="_blank"><img src="http://simplehitcounter.com/hit.php?uid=2335869&f=65280&b=0" border="0" height="18" width="83" alt="web counter"></a><br><a href="http://www.simplehitcounter.com" target="_blank" style="text-decoration:none;">Visiter Count</a></div>
+<!-- End of SimpleHitCounter Code -->
  
 </p></div>
   </body>
